include/sphinxbase/cmd_ln.h


typedef struct arg_s {
	char const *name;   
	int type;           
	char const *deflt;  
	char const *doc;    
} arg_t;
typedef struct cmd_ln_val_s {
    anytype_t val;
    int type;
    char *name;
} cmd_ln_val_t;
#define ARG_REQUIRED (1<<0)
#define ARG_INTEGER  (1<<1)
#define ARG_FLOATING (1<<2)
#define ARG_STRING   (1<<3)
#define ARG_BOOLEAN  (1<<4)
#define REQARG_INTEGER (ARG_INTEGER | ARG_REQUIRED)
#define REQARG_FLOATING (ARG_FLOATING | ARG_REQUIRED)
#define REQARG_STRING (ARG_STRING | ARG_REQUIRED)
#define REQARG_BOOLEAN (ARG_BOOLEAN | ARG_REQUIRED)
typedef struct cmd_ln_s {
    int refcount;
    hash_table_t *ht;
    char **f_argv;
    uint32 f_argc;
    arg_t const *defn;
} cmd_ln_t;
SPHINXBASE_EXPORT
int cmd_ln_free_r(cmd_ln_t *cmdln);
SPHINXBASE_EXPORT
cmd_ln_t *cmd_ln_parse_r(cmd_ln_t *inout_cmdln, 
                         arg_t const *defn,	
                         int32 argc,		
                         char *argv[],		
                         int32 strict           
    );
SPHINXBASE_EXPORT
cmd_ln_val_t *cmd_ln_access_r(cmd_ln_t *cmdln, char const *name);
SPHINXBASE_EXPORT
int cmd_ln_type_r(cmd_ln_t *cmdln, char const *name);
SPHINXBASE_EXPORT
char const *cmd_ln_str_r(cmd_ln_t *cmdln, char const *name);
SPHINXBASE_EXPORT
long cmd_ln_int_r(cmd_ln_t *cmdln, char const *name);
SPHINXBASE_EXPORT
double cmd_ln_float_r(cmd_ln_t *cmdln, char const *name);
SPHINXBASE_EXPORT
void cmd_ln_set_str_r(cmd_ln_t *cmdln, char const *name, char const *str);
SPHINXBASE_EXPORT
void cmd_ln_set_int_r(cmd_ln_t *cmdln, char const *name, long iv);
SPHINXBASE_EXPORT
void cmd_ln_set_float_r(cmd_ln_t *cmdln, char const *name, double fv);
SPHINXBASE_EXPORT
int cmd_ln_exists_r(cmd_ln_t *cmdln, char const *name);