include/pocketsphinx.h


typedef enum ps_type_e  {
    ARG_REQUIRED =  (1<<0), 
    ARG_INTEGER = (1<<1),   
    ARG_FLOATING  = (1<<2), 
    ARG_STRING = (1<<3),    
    ARG_BOOLEAN = (1<<4),   
    REQARG_INTEGER = (ARG_INTEGER | ARG_REQUIRED),
    REQARG_FLOATING = (ARG_FLOATING | ARG_REQUIRED),
    REQARG_STRING = (ARG_STRING | ARG_REQUIRED),
    REQARG_BOOLEAN = (ARG_BOOLEAN | ARG_REQUIRED)
} ps_type_t;
typedef struct ps_arg_s {
	char const *name;   
	int type;           
	char const *deflt;  
	char const *doc;    
} ps_arg_t;
typedef struct cmd_ln_s ps_config_t;
typedef struct ps_decoder_s ps_decoder_t;
typedef struct ps_seg_s ps_seg_t;
POCKETSPHINX_EXPORT
ps_decoder_t *ps_init(ps_config_t *config);
POCKETSPHINX_EXPORT
int ps_reinit(ps_decoder_t *ps, ps_config_t *config);
POCKETSPHINX_EXPORT
int ps_reinit_feat(ps_decoder_t *ps, ps_config_t *config);
POCKETSPHINX_EXPORT
ps_arg_t const *ps_args(void);
POCKETSPHINX_EXPORT
int ps_free(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
logmath_t *ps_get_logmath(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
int ps_add_word(ps_decoder_t *ps,
                char const *word,
                char const *phones,
                int update);
POCKETSPHINX_EXPORT
int ps_start_utt(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
int ps_process_raw(ps_decoder_t *ps,
                   int16 const *data,
                   size_t n_samples,
                   int no_search,
                   int full_utt);
POCKETSPHINX_EXPORT
int ps_end_utt(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
char const *ps_get_hyp(ps_decoder_t *ps, int32 *out_best_score);
POCKETSPHINX_EXPORT
int32 ps_get_prob(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
ps_seg_t *ps_seg_iter(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
ps_seg_t *ps_seg_next(ps_seg_t *seg);
POCKETSPHINX_EXPORT
char const *ps_seg_word(ps_seg_t *seg);
POCKETSPHINX_EXPORT
void ps_seg_frames(ps_seg_t *seg, int *out_sf, int *out_ef);
POCKETSPHINX_EXPORT
int32 ps_seg_prob(ps_seg_t *seg, int32 *out_ascr, int32 *out_lscr, int32 *out_lback);
POCKETSPHINX_EXPORT
void ps_seg_free(ps_seg_t *seg);