include/sphinxbase/logmath.h


typedef struct logmath_s logmath_t;
SPHINXBASE_EXPORT
logmath_t *logmath_init(float64 base, int shift, int use_table);
SPHINXBASE_EXPORT
int logmath_get_zero(logmath_t *lmath);
SPHINXBASE_EXPORT
int logmath_free(logmath_t *lmath);
SPHINXBASE_EXPORT
int logmath_add(logmath_t *lmath, int logb_p, int logb_q);
SPHINXBASE_EXPORT
int logmath_log(logmath_t *lmath, float64 p);
SPHINXBASE_EXPORT
float64 logmath_exp(logmath_t *lmath, int logb_p);
SPHINXBASE_EXPORT
int logmath_ln_to_log(logmath_t *lmath, float64 log_p);
SPHINXBASE_EXPORT
float64 logmath_log_to_ln(logmath_t *lmath, int logb_p);
SPHINXBASE_EXPORT
int logmath_log10_to_log(logmath_t *lmath, float64 log_p);
SPHINXBASE_EXPORT
float64 logmath_log_to_log10(logmath_t *lmath, int logb_p);